[gd_scene load_steps=18 format=1]

[ext_resource path="res://shared/theme.tres" type="Theme" id=1]
[ext_resource path="res://menu/menu.gd" type="Script" id=2]
[ext_resource path="res://gfx/main_menu_bg2.png" type="Texture" id=3]
[ext_resource path="res://KOBUGE_Splash.png" type="Texture" id=4]
[ext_resource path="res://gfx/logo.png" type="Texture" id=5]
[ext_resource path="res://menu/splash.gd" type="Script" id=6]
[ext_resource path="res://gfx/godot_logo.png" type="Texture" id=7]
[ext_resource path="res://KOBUGE_logo.png" type="Texture" id=8]
[ext_resource path="res://menu/levels.gd" type="Script" id=9]
[ext_resource path="res://menu/level_select_button.tscn" type="PackedScene" id=10]
[ext_resource path="res://fonts/papercut.fnt" type="BitmapFont" id=11]
[ext_resource path="res://menu/options.gd" type="Script" id=12]
[ext_resource path="res://menu/credits.gd" type="Script" id=13]
[ext_resource path="res://audio/main_menu.ogg" type="AudioStream" id=14]

[sub_resource type="Animation" id=1]

resource/name = "default"
length = 8.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("background:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 8 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 1024, 768 ), Rect2( 1024, 0, 1024, 768 ) ]
}

[sub_resource type="Animation" id=2]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 15.0502, 19.2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}

[sub_resource type="Animation" id=3]

length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("initial_splash/image:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1, 2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("background_layer/background:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="menu" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )
__meta__ = {
"__editor_plugin_screen__": "2D"
}
screen_move_speed = 800.0

[node name="background_layer" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="background" type="Sprite" parent="background_layer"]

transform/pos = Vector2( 512, 384 )
z/z = -99
texture = ExtResource( 3 )
region = true
region_rect = Rect2( 646.987, 0, 1024, 768 )

[node name="animation_player" type="AnimationPlayer" parent="background_layer"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/default = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "default"

[node name="initial_splash" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="image" type="TextureFrame" parent="initial_splash"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 768.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 0

[node name="animation_player" type="AnimationPlayer" parent="initial_splash"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/SplashFade = SubResource( 2 )
playback/active = true
playback/speed = 3.0
blend_times = [  ]
autoplay = ""

[node name="main" type="VBoxContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 0, 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 16.0
margin/right = -4.0
margin/bottom = 0.0
custom_constants/separation = 20
alignment = 0

[node name="logo" type="TextureFrame" parent="main"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
size_flags/stretch_ratio = 3.0
margin/left = 200.0
margin/top = 26.0
margin/right = 827.0
margin/bottom = 179.0
texture = ExtResource( 5 )
stretch_mode = 0

[node name="splash" type="Node2D" parent="main/logo"]

transform/pos = Vector2( 602.573, 151.655 )
transform/rot = 15.0502
z/z = 4
script/script = ExtResource( 6 )
splashes_path = "res://splashes.txt"

[node name="label" type="Label" parent="main/logo/splash"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 1 )
margin/left = -216.0
margin/top = -45.0
margin/right = 199.0
margin/bottom = 47.0
custom_colors/font_color = Color( 1, 0.665668, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Some sample splash, https://github.com/KOBUGE-Games/minilens"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="animation_player" type="AnimationPlayer" parent="main/logo/splash"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/loop = SubResource( 2 )
playback/active = true
playback/speed = 0.2
blend_times = [  ]
autoplay = "loop"

[node name="splash_reload" type="TextureButton" parent="main/logo"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 394.0
margin/top = 64.0
margin/right = 474.0
margin/bottom = 110.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="buttons" type="GridContainer" parent="main"]

rect/min_size = Vector2( 400, 300 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 1
size_flags/vertical = 1
size_flags/stretch_ratio = 3.0
margin/left = 314.0
margin/top = 226.0
margin/right = 714.0
margin/bottom = 526.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="options" type="Button" parent="main/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 208.0
margin/bottom = 145.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false

[node name="levels" type="Button" parent="main/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 218.0
margin/top = 0.0
margin/right = 399.0
margin/bottom = 145.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play"
flat = false

[node name="credits" type="Button" parent="main/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 155.0
margin/right = 208.0
margin/bottom = 300.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Credits"
flat = false

[node name="quit" type="Button" parent="main/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 218.0
margin/top = 155.0
margin/right = 399.0
margin/bottom = 300.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false

[node name="logos" type="HBoxContainer" parent="main"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 1
size_flags/stretch_ratio = 2.0
margin/left = 0.0
margin/top = 564.0
margin/right = 1028.0
margin/bottom = 664.0
custom_constants/separation = 40
alignment = 1

[node name="godot" type="TextureFrame" parent="main/logos"]

rect/min_size = Vector2( 277, 100 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 1
margin/left = 239.0
margin/top = 0.0
margin/right = 516.0
margin/bottom = 100.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 0

[node name="kobuge" type="TextureFrame" parent="main/logos"]

rect/min_size = Vector2( 233, 100 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 556.0
margin/top = 0.0
margin/right = 789.0
margin/bottom = 100.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 0

[node name="copyright" type="Label" parent="main"]

rect/min_size = Vector2( 0, 48 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 703.0
margin/right = 1028.0
margin/bottom = 751.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Â© 2015-2016 KOBUGE Games - kobuge-games.github.io/minilens"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="levels" type="ReferenceFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 1024.0
margin/top = 0.0
margin/right = -1024.0
margin/bottom = 0.0
script/script = ExtResource( 9 )
packs_file_path = "res://levels/packs.txt"
level_packs_dir_path = "res://levels"
names_file_name = "names.txt"
level_select_button_scene = ExtResource( 10 )

[node name="back" type="Button" parent="levels"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 8.0
margin/right = 96.0
margin/bottom = 53.0
custom_fonts/font = ExtResource( 11 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "< Back"
flat = false

[node name="items" type="VBoxContainer" parent="levels"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 61.0
margin/right = 48.0
margin/bottom = 0.0
alignment = 0

[node name="select_pack" type="HBoxContainer" parent="levels/items"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 928.0
margin/bottom = 49.0
custom_constants/separation = 12
alignment = 1

[node name="label" type="Label" parent="levels/items/select_pack"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 276.0
margin/top = 0.0
margin/right = 384.0
margin/bottom = 49.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Select pack:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option_button" type="OptionButton" parent="levels/items/select_pack"]

rect/min_size = Vector2( 256, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 396.0
margin/top = 0.0
margin/right = 652.0
margin/bottom = 49.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="levels" type="GridContainer" parent="levels/items"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 53.0
margin/right = 928.0
margin/bottom = 707.0
custom_constants/vseparation = 26
custom_constants/hseparation = 26
columns = 7

[node name="level_select_button" parent="levels/items/levels" instance=ExtResource( 10 )]

margin/right = 100.0
margin/bottom = 100.0
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="options" type="ReferenceFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = -1024.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 0.0
script/script = ExtResource( 12 )

[node name="back" type="Button" parent="options"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 96.0
margin/top = 8.0
margin/right = 8.0
margin/bottom = 53.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back >"
flat = false

[node name="settings" type="GridContainer" parent="options"]

anchor/left = 3
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 300.0
margin/top = 61.0
margin/right = -300.0
margin/bottom = 0.0
custom_constants/vseparation = 6
columns = 2

[node name="fullscreen_label" type="Label" parent="options/settings"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 367.0
margin/bottom = 49.0
text = "Fullscreen"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="fullscreen" type="OptionButton" parent="options/settings"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 371.0
margin/top = 0.0
margin/right = 600.0
margin/bottom = 49.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="music_label" type="Label" parent="options/settings"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 67.0
margin/right = 367.0
margin/bottom = 92.0
text = "Music"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="music" type="OptionButton" parent="options/settings"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 371.0
margin/top = 55.0
margin/right = 600.0
margin/bottom = 104.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="sound_label" type="Label" parent="options/settings"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 122.0
margin/right = 367.0
margin/bottom = 147.0
text = "Sounds"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sound" type="OptionButton" parent="options/settings"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 371.0
margin/top = 110.0
margin/right = 600.0
margin/bottom = 159.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="input_mode_label" type="Label" parent="options/settings"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 177.0
margin/right = 367.0
margin/bottom = 202.0
text = "Touchscreen input"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="input_mode" type="OptionButton" parent="options/settings"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 371.0
margin/top = 165.0
margin/right = 600.0
margin/bottom = 214.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="credits" type="ReferenceFrame" parent="."]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 768.0
margin/right = 0.0
margin/bottom = -768.0

[node name="back" type="Button" parent="credits"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 8.0
margin/right = 96.0
margin/bottom = 53.0
custom_fonts/font = ExtResource( 11 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "^ Back"
flat = false

[node name="label" type="Label" parent="credits"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 56.0
margin/right = 24.0
margin/bottom = 24.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "long. loadfajsdnfadkjsasdf a
text!! adsfdksfdsflnsfks
===
hehe! :D"
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 13 )
credits_path = "res://CREDITS.txt"

[node name="music" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 14 )
stream/play = false
stream/loop = true
stream/volume_db = -10.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="animation_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/SplashFade = SubResource( 3 )
playback/active = true
playback/speed = 3.0
blend_times = [  ]
autoplay = ""


